# openduckminiv2_playground

./: .gitignore  README.md  TODO.md  export_onnx.py  mujoco_infer.py  mujoco_replay_reference.py  plot_phases.py  plot_saved_obs.py  poly_reference_motion.py  polynomial_coefficients.json  polynomial_coefficients_faster_lower.json  process_reference.py  pyproject.toml  reference_motion.py  reference_motion_inference.py  test_env.py  test_eval.py  test_phase.py  test_train.py  testtt.py  train.py
misc/: plot_phases.py  plot_saved_obs.py
new_ref_motion/: 100_0.03_0.121_-0.121.json  101_0.091_0.121_-0.121.json  102_0.152_0.121_-0.121.json  103_0.212_0.121_-0.121.json  104_0.273_0.121_-0.121.json  105_-0.091_-0.121_-0.03.json  106_-0.03_-0.121_-0.03.json  107_0.03_-0.121_-0.03.json  108_0.091_-0.121_-0.03.json  109_0.152_-0.121_-0.03.json  10_0.091_-0.061_-0.303.json  110_0.212_-0.121_-0.03.json  111_0.273_-0.121_-0.03.json  112_-0.091_-0.061_-0.03.json  113_-0.03_-0.061_-0.03.json  114_0.03_-0.061_-0.03.json  115_0.091_-0.061_-0.03.json  116_0.152_-0.061_-0.03.json  117_0.212_-0.061_-0.03.json  118_0.273_-0.061_-0.03.json  119_-0.091_0.0_-0.03.json  11_0.152_-0.061_-0.303.json  120_-0.03_0.0_-0.03.json  121_0.03_0.0_-0.03.json  122_0.091_0.0_-0.03.json  123_0.152_0.0_-0.03.json  124_0.212_0.0_-0.03.json  125_0.273_0.0_-0.03.json  126_-0.091_0.061_-0.03.json  127_-0.03_0.061_-0.03.json  128_0.03_0.061_-0.03.json  129_0.091_0.061_-0.03.json  12_0.212_-0.061_-0.303.json  130_0.152_0.061_-0.03.json  131_0.212_0.061_-0.03.json  132_0.273_0.061_-0.03.json  (+241 more)
utils/: export_onnx.py
(+300 files in other folders)
