[project]
name = "openduckminiv2-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "=3.11"
dependencies = [
    "jax[cuda12]>=0.5.0",
    "jaxlib>=0.5.0",
    "matplotlib>=3.10.0",
    "mediapy>=1.2.2",
    "onnxruntime>=1.20.1",
    "playground>=0.0.3",
    "tensorflow>=2.18.0",
    "tf2onnx>=1.16.1",
]
